--- a/Execution_Level/Current_Sens/Makefile
+++ b/Execution_Level/Current_Sens/Makefile
@@ -257,7 +257,7 @@ $(BUILD_DIR)/$(TARGET_SERIES)$(TARGET_VERSION).elf: $(OBJECTS) Makefile
 	@echo "-----------------------------------------------------"	
 
 $(BUILD_DIR):
-	@"mkdir" $@
+	@mkdir $@
 
 #######################################
 # clean up
